# gameoflife

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/App/: App.cpp  App.h
src/App/Grid/: Cell.cpp  Cell.h  Grid.cpp  Grid.h
